# shuttlesock

./: .cirrus.yml  .cloc-exclude  .codecov.yml  .gitattributes  .gitignore  .luacov  .rebuild.lua.kate-swp  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Readme.md  examine_coredump.sh  memory-sanitizer-blacklist.txt  merge_luacov_stats.lua  rebuild.rb  rebuild.sh  test.sh  valgrind-suppressions.txt
cmake/: Findatomic_ops.cmake  MakeCmakeALittleLessTerribleForOurUseCase.cmake  PackLuaScripts.cmake  PackLuaScripts.lua  PaddedVersionNumber.cmake  SetProjectCompiler.cmake  ShuttlesockC-ares.cmake  ShuttlesockHyperscan.cmake  ShuttlesockLibev.cmake  ShuttlesockLiburing.cmake  ShuttlesockLua.cmake  ShuttlesockModule.cmake  ShuttlesockNghttp2.cmake  ShuttlesockOpenSSL.cmake  ShuttlesockPCRE.cmake  ShuttlesockPicoHttpParser.cmake  ShuttlesockPthreads.cmake  ShuttlesockTestFeatures.cmake  TargetRequirePackage.cmake  TestAccept4.cmake  TestC-aresVersion.cmake  TestEndianness.cmake  TestIPv6.cmake  TestIoUringHeaders.cmake  TestOverlengthStrings.cmake  TestPthreadSetname.cmake  TestSO_REUSEPORT.cmake  TestStrsignal.cmake  TestTypeGenericMacros.cmake  TestTypeofKeyword.cmake  text2h.cmake
cmake/dependencies/: C-Ares.cmake  Hyperscan.cmake  Lua.cmake  Nghttp2.cmake  liburing.cmake  picohttpparser.cmake  pthreads.cmake
lib/dns/: README.txt  dns.c  dns.h
lib/libancillary/: ancillary.h  fd_recv.c  fd_send.c  test.c
lib/liburing/: config-host.mak
lib/liburing/examples/: io_uring-cp  io_uring-test  link-cp
lib/liburing/src/: liburing.so.1.0.1  queue.ol  queue.os  register.ol  register.os  setup.ol  setup.os  syscall.ol  syscall.os
lib/liburing/test/: 35fa71a030ca-test  917257daa0fe-test  b19062a56726-test  cq-full  eeed8b54e0df-test  fsync  io_uring_enter  io_uring_register  io_uring_setup  link  nop  poll  poll-cancel  ring-leak  send_recvmsg  sq-full
src/: .luacov  buffer.c  config.c  config.lua  config_file.c  configure.h.tmpl  core_modules.c  core_modules.c.tmpl  event.c  event.lua  instring.c  instring.lua  instring_parse.lua  io.c  ipc.c  ipc.h  ipc_commands.c  ipc_commands.c.orig  log.c  lua_binding.c  lua_bridge.c  lua_module.c  lua_module.lua  lua_utils.c  module.c  module.lua  module_event.c  module_event.lua  pool.c  resolver.c  ringbuf.c  ringbuf.h  sbuf.c  settings.c  shared_slab.c  shuttlesock.c  shuttlesock_private.h  stalloc.c  sysutil.c  sysutil.h  (+1 more)
src/include/: shuttlesock.h
src/include/shuttlesock/: buffer.h  build_config.h  build_config.h.tmpl  common.h  config.h  config_file.h  configure.h  configure.h.tmpl  core_modules.h  core_modules.h.tmpl  embedded_lua_scripts.h  event.h  instring.h  internal.h  io.h  ipc.h  llist.h  log.h  lua_bridge.h  lua_module.h  lua_utils.h  module.h  module_event.h  modules  pool.h  resolver.h  sbuf.h  settings.h  shared_slab.h  stalloc.h  sysutil.h  watchers.h
src/include/shuttlesock/modules/: core.h  lua_bridge.h  server.h
src/io/: io.c  io.h  io_libev.c  io_libev.h  io_liburing.c  io_liburing.c.orig  io_liburing.h  io_private.h
src/lua/: chk.lua  config.lua  config_parser.lua  inc1.conf  inc2.conf  module.lua  nginx.conf
src/lua_api/: atomics.lua  config.lua  ipc.lua  lazy_atomics.c  lazy_atomics.h  lua_ipc.c  lua_ipc.h  module.lua  process.lua  shuttlesock.lua  watcher.lua
src/luarocks/: mm.lua
src/modules/: config.c  core.c  core.h  lua_bridge.c  server.c  server.h  server.lua
src/modules/config/: config.c  config.h  config.lua  private.h
src/modules/core/: core.c  core.h  core_io_uring.c  core_io_uring.h
src/modules/lua_bridge/: lua_binding.c  lua_binding.c.orig  lua_binding.lua  lua_bridge.c  lua_bridge.h  private.h
src/modules/lua_bridge/api/: atomics.lua  config.lua  core.c  core.lua  core_lua_api.c  coroutine.lua  debug.lua  event.lua  io.lua  io_lua.c  io_lua.h  ipc.lua  ipc_lua_api.c  ipc_lua_api.h  lazy_atomics.c  lazy_atomics.h  log.lua  lua_ipc.c  lua_ipc.h  module.lua  process.lua  semaphore.lua  shared_table.c  shuttlesock.lua  utils.lua  watcher.lua
src/modules/lua_bridge/api/debug/: mutex.lua  spinlock.lua
src/modules/server/: .server.c.kate-swp  module_setup.lua  server.c  server.h  server.lua
test/: .luacov  snow.h  test.c  test.h  test_utils.c  util.c
test/data/: check_shuttlesock_version.lua  config_path_matching.lua  config_test_module.lua  config_variable_simple.lua  core_error_events.lua  event_cancel.lua  event_priorities.lua  ipc_broadcast.lua  ipc_fill_buffer.lua  ipc_master_manager.lua  ipc_master_worker.lua  ipc_single_roundtrip.lua  lazy_atomics.lua  lua_feature___gc_on_tables.lua  module_config_listen.lua  module_config_settings.lua  module_publishing_events.lua  module_simple.lua  module_with_bad_gxcopy.lua  module_with_optional_events.lua  test_a_module.lua  test_config.lua  test_config_default_values.lua  test_config_general.lua  test_config_heredocs_valid.lua  test_config_module_bad_variable_declarations.lua  test_config_module_variables.lua  test_config_module_variables_once_per_worker.lua  test_config_path_matching.lua  test_config_string_values.lua  test_config_value_types.lua  test_core_error_events.lua  test_gxcopy_check.lua  test_ipc_single_roundtrip.lua  test_lazy_atomics.lua  test_module_config_settings.lua
